fixed up navigation on mobile

--- a/src/layouts/components/hamburger.scss
+++ b/src/layouts/components/hamburger.scss
@@ -1,11 +1,14 @@
 .hamburger {
     box-sizing: border-box;
     display: none;
-    width: 40px;
-    height: 40px;
+    width: rem(40);
+    height: rem(40);
 
     cursor: pointer;
     background-color: $color-primary;
+    border: none;
+
+    appearance: none;
 
     @media (--to-medium-screen-w) {
         display: block;
@@ -13,6 +16,7 @@
 
     &-wrapper {
         position: relative;
+        height: inherit;
     }
 
     &-item {
