--- a/src/layouts/components/hero.scss
+++ b/src/layouts/components/hero.scss
@@ -19,6 +19,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
+    }
+
+    &-subtitle {
+        color: $color-light-shade-1;
+        font-weight: $weight-light;
     }
 
     .header {
